# CICE

.github/workflows/: test-cice.yml  test-cice_ubuntu.yml
cicecore/cicedyn/general/: ice_init.F90
cicecore/cicedyn/infrastructure/: ice_domain.F90  ice_grid.F90
cicecore/cicedyn/infrastructure/comm/mpi/: ice_exit.F90
cicecore/cicedyn/infrastructure/grid/: ice_grid.F90  ice_grid_average.F90  ice_grid_bin.F90  ice_grid_idealised.F90  ice_grid_latlon.F90  ice_grid_lengths.F90  ice_grid_nc.F90  ice_grid_neighbor.F90  ice_grid_read_bin.F90  ice_grid_read_nc.F90  ice_gridbox.F90
cicecore/cicedyn/infrastructure/io/io_pio2/: ice_pio.F90  ice_restart.F90
cicecore/drivers/access/cmeps/: CICE_InitMod.F90  ice_comp_nuopc.F90  ice_import_export.F90
cicecore/drivers/access/dmi/: CICE_RunMod.F90
cicecore/drivers/nuopc/cmeps/: ice_comp_nuopc.F90  ice_import_export.F90
cicecore/drivers/unittest/gridloadchk/: CICE_InitGrid.F90  gridloadchk.F90
cicecore/shared/: ice_restart_shared.F90
cmake/: AccessCiceCmeps.cmake.in  CMakeLists.txt  CicelibConfig.cmake.in
configuration/scripts/: Makefile  cice.batch.csh
configuration/scripts/cmake/: CMakeLists.txt  CicelibConfig.cmake.in
configuration/scripts/machines/: Macros.gadi_intel  env.gadi_intel
configuration/scripts/options/: set_env.gridloadchk
configuration/scripts/tests/: unittest_suite.ts
